🎉 Fit8健身应用完整版本
✨ 主要功能：
- 🏃 8周训练计划系统
- 🍎 智能饮食管理
- 💧 饮水量跟踪
- 📊 数据统计与可视化
- 🏆 成就系统
- 📸 进度照片记录
- 📱 专业UI设计

🔧 技术特性：
- Kotlin + MVVM架构
- Room数据库
- Hilt依赖注入
- ViewBinding
- Coroutines异步处理
- MPAndroidChart图表
- Material Design 3

📈 数据导出：
- CSV格式数据导出
- 专业数据报告图片生成
- 智能健身建议算法
- 趋势图表可视化

🎨 界面优化：
- 自定义Fit8应用图标
- 现代化Material Design
- 响应式布局设计
- 流畅的用户体验

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,24 @@ android {
     }
 
     buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
+            debuggable true
+        }
+
         release {
+            // 暂时禁用代码混淆来测试
             minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            // 使用debug签名配置（用于测试）
+            signingConfig signingConfigs.debug
+
+            // 优化配置
+            zipAlignEnabled true
+            debuggable false
         }
     }
     compileOptions {
